[package]
name = "ratatui_input"
version = "0.2.0"
edition = "2021"
autoexamples = true
authors = ["Vid Vrbnjak"]
categories = ["command-line-interface", "gui"]
keywords = ["gui", "ratatui", "input", "plugin"]
rust-version = "1.76.0"
publish = true
license = "MIT"
description = "Simple to use input widget for ratatui"

[dependencies]
clipboard-win = "5.3.1"
crossterm = "0.27.0"
ratatui = "0.26.2"

[dev-dependencies]
indoc = "2.0.5"
