[package]
name = "ratatui_input"
version = "0.1.3"
edition = "2021"
autoexamples = true
authors = ["Vid Vrbnjak"]
categories = ["command-line-interface", "gui"]
keywords = ["gui", "ratatui", "input", "plugin"]
rust-version = "1.76.0"
publish = true
license = "MIT"
description = "Simple to use input widget for ratatui"
repository = "https://github.com/VidVrbnjak/ratatui_input"
homepage = "https://github.com/VidVrbnjak/ratatui_input"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]

[dependencies]
clipboard = "0.5.0"
crossterm = "0.27.0"
ratatui = "0.26.2"

[dev-dependencies]
indoc = "2.0.5"

[[example]]
name = "minimal"
doc-scrape-examples = true
